# ChangeLog for perl-core/Module-Load-Conditional
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Load-Conditional/ChangeLog,v 1.1 2009/01/20 12:20:58 tove Exp $

*Module-Load-Conditional-0.30 (20 Jan 2009)

  20 Jan 2009; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Module-Load-Conditional-0.28.ebuild,
  +Module-Load-Conditional-0.30.ebuild:
  Version bump. Move from dev-perl to perl-core.

*Module-Load-Conditional-0.28 (23 Dec 2008)

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +Module-Load-Conditional-0.28.ebuild:
  Initial commit. Dep for Archive-Rar-2.x
