@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Load-Conditional/Attic/Module-Load-Conditional-0.30.ebuild,v 1.1 2009/01/20 12:20:58 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Load-Conditional/Attic/Module-Load-Conditional-0.30.ebuild,v 1.2 2009/01/20 13:57:08 tove Exp $
 
 MODULE_AUTHOR="KANE"
 inherit perl-module
@@ -14,5 +14,6 @@ IUSE=""
 
 DEPEND=">=virtual/perl-Module-Load-0.12
 	virtual/perl-Locale-Maketext-Simple
-	virtual/perl-Params-Check"
+	virtual/perl-Params-Check
+	virtual/perl-version"
 RDEPEND="${DEPEND}"
