@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Module-Load-Conditional
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Load-Conditional/ChangeLog,v 1.1 2009/01/20 12:20:58 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Load-Conditional/ChangeLog,v 1.2 2009/01/20 13:57:08 tove Exp $
+
+  20 Jan 2009; Torsten Veller <tove@gentoo.org>
+  Module-Load-Conditional-0.30.ebuild:
+  Add virtual/perl-version dependency
 
 *Module-Load-Conditional-0.30 (20 Jan 2009)
 
